# iok

./: Makefile  README.md  iok-1.3.10-oriya-translations.patch  iok-1.3.13-configure.patch  iok-1.3.13-increase-size-xkb-name-array.patch  iok-1.3.13-save-file-enhancements.patch  iok-1.3.13_translation_bz_819795.patch  iok-2.1.3-some_po_header_updates.patch  iok-2.1.3-translation_updates.patch  iok.spec
src/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.old  aclocal.m4  config.h.in  configure  configure.in  iok.1  iok.desktop.in.in
src/data/: Makefile.am  Makefile.in
src/data/icons/: Makefile.am  Makefile.in
src/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  as.po  bho.po  bn_IN.po  brx.po  bs.po  ca.po  da.po  de.po  de_CH.po  doi.po  el.po  es.po  fa.po  fr.po  gu.po  hi.po  hne.po  hu.po  iok.pot  it.po  ja.po  kn.po  ko.po  mai.po  ml.po  mni.po  mr.po  nds.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sa.po  (+11 more)
src/src/: Makefile.am  Makefile.in  callbacks.c  interface.c  interface.h  keyevent.c  keys.h  main.c
