dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(iok, 1.3.13)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_PROG_INTLTOOL([0.35.0])

# Xtest extension
AC_PATH_X
AC_CHECK_LIB(Xtst, XTestFakeKeyEvent, [],
             [AC_ERROR(XTest library not found or outdated!
                  Please install the latest libxtst-dev package.)])
# X11 library check
AC_CHECK_LIB(X11, XKeysymToString)

# check for GTK2
pkg_modules="gtk+-2.0 >= 2.4.0"
PKG_CHECK_MODULES(GTK2, [$pkg_modules])
AC_SUBST(GTK2_CFLAGS)
AC_SUBST(GTK2_LIBS)

# check for GDK2
pkg_modules="gtk+-2.0 >= 2.22.0"
PKG_CHECK_MODULES(GDK2, [$pkg_modules])
AC_SUBST(GDK2_CFLAGS)
AC_SUBST(GDK2_LIBS)

# check for LIBXML2
pkg_modules="libxml-2.0 >= 2.4.0"
PKG_CHECK_MODULES(LIBXML2, [$pkg_modules])
AC_SUBST(LIBXML2_CFLAGS)
AC_SUBST(LIBXML2_LIBS)

# check for UNIQUE
pkg_modules="unique-1.0 >= 1.0.8"
PKG_CHECK_MODULES(UNIQUE, [$pkg_modules])
AC_SUBST(UNIQUE_CFLAGS)
AC_SUBST(UNIQUE_LIBS)

GETTEXT_PACKAGE=iok
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS="ar as bn_IN bs ca da de de_CH el es fa fr gu hi hu it ja kn ko mai ml mr nds nl or pa pl pt_BR pt ru sr@latin sr sv ta te th uk zh_CN zh_TW"
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
iok.desktop.in
src/Makefile
po/Makefile.in
])

