dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(iok, 2.1.3)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_PROG_INTLTOOL([0.35.0])

# Xtest extension
AC_PATH_X
AC_CHECK_LIB(Xtst, XTestFakeKeyEvent, [],
             [AC_ERROR(XTest library not found or outdated!
                  Please install the latest libxtst-dev package.)])

# X11 library check
AC_CHECK_LIB(X11, XKeysymToString)

# check for GTK3
pkg_modules="gtk+-3.0 >= 3.0.0"
PKG_CHECK_MODULES(GTK3, [$pkg_modules])
AC_SUBST(GTK3_CFLAGS)
AC_SUBST(GTK3_LIBS)

# check for LIBXML2
pkg_modules="libxml-2.0 >= 2.4.0"
PKG_CHECK_MODULES(LIBXML2, [$pkg_modules])
AC_SUBST(LIBXML2_CFLAGS)
AC_SUBST(LIBXML2_LIBS)

# check for UNIQUE3
pkg_modules="unique-3.0 >= 2.91.0"
PKG_CHECK_MODULES(UNIQUE3, [$pkg_modules])
AC_SUBST(UNIQUE3_CFLAGS)
AC_SUBST(UNIQUE3_LIBS)

GETTEXT_PACKAGE=iok
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS="ar as bho bn_IN brx bs ca da de de_CH doi el es fa fr gu hi hne hu it ja kn ko mai ml mni mr nds nl or pa pl pt_BR pt ru sa sat sd sr@latin sr sv ta te th uk zh_CN zh_TW"
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
iok.desktop.in
src/Makefile
po/Makefile.in
data/Makefile
data/icons/Makefile
])

