# vim:set noet ts=4:
icons_DATA = \
	$(NULL)

iconsdir = $(pkgdatadir)/icons

sysicons_DATA = \
	$(NULL)
sysiconsdir = $(datadir)/pixmaps

hicolor_icon_16_DATA = \
	16/iok.png \
	$(NULL)
hicolor_icon_16dir= $(datadir)/icons/hicolor/16x16/apps/

hicolor_icon_22_DATA = \
	22/iok.png \
	$(NULL)
hicolor_icon_22dir= $(datadir)/icons/hicolor/22x22/apps/

hicolor_icon_24_DATA = \
	24/iok.png \
	$(NULL)
hicolor_icon_24dir= $(datadir)/icons/hicolor/24x24/apps/

hicolor_icon_32_DATA = \
	32/iok.png \
	$(NULL)
hicolor_icon_32dir= $(datadir)/icons/hicolor/32x32/apps/

hicolor_icon_48_DATA = \
	48/iok.png \
	$(NULL)
hicolor_icon_48dir= $(datadir)/icons/hicolor/48x48/apps/

hicolor_icon_scalable_DATA = \
	scalable/iok.svg \
	$(NULL)
hicolor_icon_scalabledir= $(datadir)/icons/hicolor/scalable/apps/

EXTRA_DIST = \
	$(icons_DATA) \
	$(sysicons_DATA) \
	$(hicolor_icon_16_DATA) \
	$(hicolor_icon_22_DATA) \
	$(hicolor_icon_24_DATA) \
	$(hicolor_icon_32_DATA) \
	$(hicolor_icon_48_DATA) \
	$(hicolor_icon_scalable_DATA) \
	$(NULL)

